--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,303 +1,545 @@
 *{
-    color: #161616;
-    background-color: #FFFEFD;
     margin: 0;
-    top: 0;
-    list-style: none;
-    text-decoration: none;
-    --prim: #4A93E6;
-    --sec: #EDEFFF;
-    --shdw: #4387D4;
-}
-svg{
-    width: 10px;
-}
-
-header{
-    margin: 0 auto;
-    text-align: center;
-    height: 200px;
-    width: 100%;
-    position: sticky;
-    top: 0px;
-    z-index: 1;
-    
-}
-
-header .logo{
-    padding-top: 60px;
-    margin: 0 auto;
-}
-
-.navbar{
-    width: 100%;
-    margin: 40px 0;
-}
-
-.navbar ul{
-    display: flex;
-    flex-wrap: wrap;
-    padding:0;
-}
-
-.navbar li{
-    width: 20%;
-    flex: auto;
-    font-size:1.5em ;
-    float: left;
-    padding: 20px 0px;
-}
-
-.navbar li:hover {
-    cursor: pointer;
-    box-sizing: content-box;
-    border-bottom-style: solid ;
-}
-
-.logo{
-    font-family: 'monotype corsiva';
-}
-
-.top-wrapper{
-    text-align: center;
-    padding: 100px;
+    padding: 0;
     box-sizing: border-box;
-    background-color: var(--sec);
-    margin-bottom: 50px;
+    list-style: none;
+    font-family: 'Nunito','Raleway','Sans Serif';
+    --pri-color: #060606;
+    --sec-color: var(--light-color);
+    --shadow: #c5c5c5;
+    --border: #E0E0E0;
+    color: var(--pri-color);
+    text-decoration: none;
+    --red : #eb4d4b;
+    --black : #130f40;
+    --light-color : #666;
+    --border-type : .1rem solid rgba(0,0,0,.3);
+    --box-shadow : 0 .5rem 1rem rgba(0,0,0,.1);
+
 }
 
-.container{
-    width: 100%;
-    background-color: var(--sec);
-    display: flex;
-    flex-wrap: wrap;
-    position: relative;
-    justify-content: center;
+
+p{
+        font-size: 14px;
+        font-weight: 300;
+        text-align:justify;
+        padding: 0 10px;
+        letter-spacing: 1px;
+        
 }
 
-.container h2{
-    letter-spacing: 1.5px;
-    background-color: var(--sec);
-    padding-top: 10px;
+h1{
+    font-weight: 600;
+    font-size: 1.2em;
+    padding: 0 10px;
 }
+
 
 h2{
-    font-weight: 100;
-    font-size: 20px;
+    font-weight: 600;
+    font-size: 1.2em;
+    padding: 0 10px;
 }
 
-.btn {
+h3{
+        font-weight: 600;
+    font-size: 1.2em;
+    padding: 0 10px;
+}
+
+#background-half{
     position: absolute;
-    color: white;
-    box-sizing: border-box;
-    margin-top: 50px;
-    padding: 10px 20px;
-    background-color: var(--prim);
-    width: max-content;
-    border-radius: 5px;
+    top: 0px;
+    width: 100%;
+    height: 50vh;
+    z-index: 0;
+    overflow: hidden;
 }
 
-.btn:hover{
-    background-color: var(--shdw);
+#background-half img{
+   height: 100%; 
+}
+
+.all-container{
+    position: relative;
+    width: 80vw;
+    height: fit-content;
+    margin: 80px auto;
+    background-color: white;
+    box-shadow: 0px 0px 3px var(--shadow);
+    border-radius:  25px;
+    padding: 30px 30px;
+    z-index: 1;
+    display: flex;
+    flex-wrap: wrap;
 }
 .wrapper{
-    padding: 0 60px;
+    width: 100%;
+    flex-wrap: wrap;   
+    height: fit-content;
 }
 
-.course-wrap{
+#profile-card{
+    height: fit-content;
+    overflow: hidden;
+}
+
+.top-profile{
+ height: 150px;
+ background-color: var(--sec-color);
+}
+
+.bot-profile{
+    height: fit-content;
+}
+
+.bot-profile img{
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    position: relative;
+    left: 50%;
+    right: 50%;
+    transform: translate(-50%,-50%);
+}
+
+.sub-desc{
+    margin-top: -20px;
+    padding: 0px 20px 20px 20px;
+    text-align: center;
+}
+
+.sub-desc p{
+    margin: 15px 0px;
+    text-align: center;
+}
+
+.social-media{
     width: 100%;
-    padding: 20px 0px;
-    margin: 0 auto;
-    height: 500px;
-    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: fit-content;
+    margin-bottom: 40px;
+}
+.social-media ul{
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+}
+
+.social-media ul li i{
+    line-height: 38px;
+    text-align: center;
+    flex: auto;
+    border-radius: 20px;
+    margin: 0px 10px;
+    font-size: 20px;
+    width: 35px;
+    height: 35px;
+    background-color: var(--sec-color);
+    color: white;
+    border-radius: 50px;
+}
+
+.container {
+    width: 65%;
+    height: fit-content;
+    float: left;
+    padding-right: 30px;
+}
+
+.article-wrapper{
+    width: 100%;
+    height: fit-content;
+}
+
+.profile-wrapper{
+    width: 35%;
+    float: right;
+    height: fit-content;
+    top: 0px;
+    position: sticky;
+    -webkit-position:sticky;
+}
+
+.copyright{
+    text-align: center;
+}
+
+.copyright-mobile{
+    display: none;
+}
+aside{
+    z-index: 2;
+    width: 100%;
+    height: 300px;
+    background-color: white;
+    border-radius:  25px;
+    box-shadow: 0px 0px 3px var(--shadow);
+    flex: auto;
+    margin-bottom: 30px;
+}
+
+#nav-bar{
+    margin-top: 30px;
+    height: fit-content;
+    margin-top: 0px;
+    padding: 0px 20px;
+}
+
+#nav-bar-mobile{
+    display: none;
+}
+#menu-bar{
+    width: 100%;
+}
+
+#menu-title{
+    text-align: center;
+    padding:10px 0px;
+    width: 100%;
+    border-bottom: 2px solid var(--border);
+    font-weight: 600;
+}
+
+.menu, .menu a{
+    padding: 10px 20px;
+    width: 100%;
+    flex: auto;
+    text-align: center;
+    border-bottom: 1px solid var(--border);
+    font-weight: 400;
+}
+
+#Contact, #contact a{
+    width: 100%;
+    border-bottom: none;
+}
+
+.menu :hover{
+    cursor: pointer;
+    color: var(--sec-color);
+}
+
+#Abt-title{
+    z-index:2;
+    position: sticky;
+    margin-top: 0px;
+    top: 0px;
+}
+
+#Exp-title{
+    z-index:2;
+    position: sticky;
+    top: 0px;
+}
+.title-bar{
+    margin-top: 30px;
+    width: 100%;
+    padding: 10px 20px;
+    height: fit-content;
+    color: white;
+    background-color: var(--sec-color);
+    border-radius: 30px;
+    box-shadow: 0px 0px 3px var(--shadow);
     display: flex;
     flex-wrap: wrap;
 }
 
-.courses, .courses h3, .courses p, svg , .courses a, span{
-    background-color: var(--prim);
+.upperbar{
+    width: 100%;
+    height: fit-content;
+}
+
+.upperbar h1{
+    float: left;
+    color: white;
+}
+.round-btn{
+    height: 30px;
+    width: 30px;
+    float: right;
+    border-radius: 20px;
+    border:2px solid white;
+    background-color:white;
+    color: white;
+    cursor: pointer;
+}
+
+.accordion-item {
+    margin-top: 30px;
+    position: relative;
+    right: 0px;
+    width: 100%;
+    padding: 10px 20px;
+    height: fit-content;
+    background-color: white;
+    border-radius: 30px;
+    box-shadow: 0px 0px 3px var(--shadow);
+}
+.accordion-item-header {
+  display: flex;
+  align-items: center;
+  position: relative;
+  cursor: pointer;
+}
+
+.accordion-item-header h2:hover{
+  color: var(--sec-color);
+}
+
+.accordion-item-header::after {
+  content: "\002B";
+  font-size: 2rem;
+  position: absolute;
+  right: 5px;
+  color:var(--sec-color)
+}
+.accordion-item-header.active::after {
+  content: "\2212";
+}
+.accordion-item-body {
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+}
+.accordion-item-body-content {
+  border-top: 1px solid var(--border);
+  padding: 10px 0px;
+  margin-top: 10px;
+}
+
+        .mySlides {
+            width: 100%;
+            display: none;
+            /* Tersembunyi secara default */
+        }
+
+        .slide1 {
+            width: 100%;
+            display: flex;
+        }
+
+        .card {
+            flex: auto;
+            margin: 10px;
+            background-color: white;
+            box-shadow: 0px 0px 3px var(--shadow);
+            border: .5px solid white ;
+            border-radius: 20px;
+            overflow: hidden;
+        }
+
+        .card h3{
+            margin: 10px;
+        }
+        .card p{
+            margin: 10px 10px 20px 10px;
+        }
+        img {
+            vertical-align: middle;
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
+        }
+
+        .slideshow-container {
+            max-width: 100%;
+            position: relative;
+            margin: auto;
+            padding-top: 15px;
+        }
+
+        .prev,
+        .next {
+            cursor: pointer;
+            position: absolute;
+            top: 50%;
+            height: 40px;
+            line-height: 40px;
+            width: 40px;
+            margin-top: -22px;
+            color: white;
+            font-weight: bold;
+            font-size: 18px;
+            transition: 0.6s ease;
+            border-radius: 20px;
+            user-select: none;
+            text-align: center;
+            opacity: 100%;
+        }
+
+        /* Meletakkan tombol next ke sebelah kanan */
+        .next {
+            right: 0;
+            border-radius: 20px;
+        }
+
+        .prev:hover,
+        .next:hover {
+            background-color: var(--sec-color);
+            color: white;
+            opacity: 100%;
+            margin-right: 10px;
+            margin-left: 10px ;
+        }
+
+        /* Animasi */
+        .fade {
+            -webkit-animation-name: fade;
+            -webkit-animation-duration: 1.5s;
+            animation-name: fade;
+            animation-duration: 1.5s;
+        }
+
+        @-webkit-keyframes fade {
+            from {
+                opacity: 0.4;
+            }
+
+            to {
+                opacity: 1;
+            }
+        }
+
+        @keyframes fade {
+            from {
+                opacity: 0.4;
+            }
+
+            to {
+                opacity: 1;
+            }
+        }
+form{
+    width: 100%;
+    height: fit-content;
+    padding: 10px 10px;
+}
+.inputbox{
+    justify-content: center;
+    align-items: center;
+    padding: 0px 5%;
+    width: 100%;
+    display: flex;
+    flex-wrap:wrap;
+}
+
+.input{
+    float: left;
+    flex:auto;
+    width: 48%;
+}
+#left-input{
+    margin-right: 4%;
+}
+textarea{
+width: 100%;
+height: fit-content;
+}
+#lower-input {
+    width: 100%
+}
+.input , textarea{
+    padding: 10px;
+    margin: 15px 0px;
+    border-radius: 20px;
+    border:2px solid white;
+    box-shadow: 0px 0px 3px var(--shadow);
+}
+
+.form-btn{
+    margin: 10px 0px 20px 0px;
+    position: relative;
+    padding:5px 15px;
+    cursor: pointer;
+    width: fit-content;
+    color: var(--sec-color);
+    font-weight: bold;
+    font-size: 16px;
+    transition: 0.6s ease;
+    border-radius: 20px;
+    float: right;
+    border:1px solid white;
+    background-color: white;
+    box-shadow: 0px 0px 3px var(--shadow);
+
+}
+
+.form-btn:hover{
+    background-color: var(--sec-color);
+    border:1px solid var(--sec-color);
     color: white;
 }
 
-.courses{
-    flex: auto;
-    width: 23%;
-    padding: 40px 40px 20px 40px;
+@media screen and (max-width:900px) {
+    .all-container{
+        width:90vw;
+    }
+
+    .card h3, .card p{
+        display: none;
+    }
+    .card img{
+        height: 130px;
+    }
+}
+
+@media screen and (max-width:752px) {
+.container {
+    width: 100%;
+    height: fit-content;
     float: left;
-    margin: 20px;
+    padding-right: 0px;
+    margin: 0px;
 }
-.courses h3, .courses p{
-    margin-bottom: 20px;
-} 
-
-.courses a{
-    text-decoration: underline;
-    margin-left: 110px;
+#background-half{
+    display: none;
 }
-
-.courses:hover{
-    box-shadow: 0px 0px 5px 0px grey;
+.all-container{
+    width: 100%;
+    padding: 20px 20px 30px 20px ;
+    margin-top: 0px;
+    height: fit-content;
+    border-radius: 0px;
 }
-
-#react{
-    margin-left: 70px;
-    margin-right: 180px;
-}
-#node{
-    margin-left: 180px;
-    margin-right: 70px;
+.article-wrapper{
+    width: 100%;
 }
 
-footer{
-        width: 100%;
-}
-
-.footer-wrapper{
-    border-top: 1px solid #A9A9A9;
-    padding: 30px 80px;
-    height: 210px;
-    box-sizing: border-box;
-    margin-top: 50px;
-}
-
-.footer-wrapper .logo h1{
-    font-size: 30px;
-}
-
-
-footer .logo{
-    float: left;
-}
-.footer-thingy{
-    float: right;
-}
-
-.title-list{
-    font-size: 1.05em;
-    text-decoration: underline;
-    margin-bottom: 15px;
-}
-
-.course-list, .Socmed-list{
-    float: left;
-    padding-right: 60px;
-}
-
-.course-list li, .Socmed-list li{
-    padding-bottom:5px;
-}
 .copyright{
-        text-align: center;
-        height: fit-content;
-        font-size: 0.8em;
-        padding: 10px 0px;
-        background-color: #161616;
-        color: white;
-        width: 100%;
-    }
-
-@media screen and (max-width: 1350px){
-    
-    .course-wrap{
-        width: 100%;
-        padding: 20px 0px;
-        margin: 0 auto;
-        height: auto;
-        box-sizing: border-box;
-        display: flex;
-        flex-wrap: wrap;
-    }
-
-    
-    .top-wrapper{
-        text-align: center;
-        padding: 100px;
-        box-sizing: border-box;
-        background-color: var(--sec);
-        margin-bottom: 50px;
-        height: 340px;
-    }
-
-    .container{
-        position: relative;
-    }
-
-
-    .container h2{
-        font-weight: 100;
-        font-size: 20px;
-        padding: 20px;
-    }
-
-    .btn {
-        position: absolute;
-        color: white;
-        box-sizing: border-box;
-        margin-top: 100px;
-        padding: 10px 20px;
-        background-color: var(--prim);
-        width: max-content;
-        border-radius: 5px;
-    }
-
-    .btn:hover{
-        background-color: var(--shdw);
-    }
-
-    .courses{
-        flex: auto;
-        width: 23%;
-        padding: 40px 40px 20px 40px;
-        float: left;
-        margin: 20px;
-    }
-    #node{
-        margin-left: 20px;
-        margin-right: 20px;
-    }
-    #react{
-        margin-left: 20px;
-        margin-right: 20px;
-    }
+    display: none;
 }
 
-@media screen and (max-width:670px) {
-    
-    .footer-wrapper{
-        height: 300px;
-        margin-top: 50px;
-    }
-    footer .logo{
-        float: left;
-        margin-bottom: 30px;
-    }
-    .footer-thingy{
-        float: left;
-    }
+.profile-wrapper{
+    width: 100%;
+    position: relative;
 }
 
-@media screen and (max-width:530px) {
-    
-    .navbar li{
-    font-size:1.2em ;
-    }
-
-    h2, .container h2{
-        font-size: 1.2em;
-    }
-
-    .btn{
-        position: absolute;
-        top: 20px;
-    }
-
-    .courses a{
-    text-decoration: underline;
-    margin-left: 55px;
+#nav-bar{
+    display: none;
 }
     
-    .footer-wrapper{
-        height: 390px;
-    }
+.copyright-mobile{
+    width: 100%;
+    display: block;
+    text-align:center;
+    padding: 40px 0px 20px 0px;
 }
 
+
+.input{
+    flex:auto;
+    width: 100%;
+}
+#left-input{
+    margin-right: 0px;
+
+}
+}
+@media screen and (max-width:472px) {
+    .card img{
+        height: 100px;
+    }
+
+}
